Fixed Issue #632 Name tooltip in course is cut off

--- a/public/stylesheets/course.css
+++ b/public/stylesheets/course.css
@@ -98,7 +98,7 @@
     position: absolute;
     left: 40px;
     display: inline-block;
-    height: 100px;
+    height: 60px;
     width: calc(100% - 80px);
     overflow: hidden;
     white-space: nowrap;
@@ -115,4 +115,8 @@
     height: 50px;
     background-color: transparent;
     display: inline-block;
+}
+
+.faces-window .tooltip {
+    position: fixed;
 }
